test/testdata/functions/redefined_parameter_error.lox
fun f(x) {
  var x = 1;
}

f(1); // error: x has already been declared
